Fix minor bugs. Possible solution for dark mode. Possible solution for pagination.

--- a/style/partials/body/_global.scss
+++ b/style/partials/body/_global.scss
@@ -11,3 +11,7 @@ html {
     padding: 0;
     border: 0;
 }
+
+body {
+    background-color: var(--bg);
+}
